# kernel-harness

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  MEMORY.md  README.md  SPEC.md  fix_cheating_upstream.patch  kb  preserve_int_dtype.patch  pyproject.toml
.claude/: settings.json
.claude/agents/: profiler.md  runner.md
.codex/: config.toml
.codex/agents/: profiler.toml  runner.toml
docs/adr/: 0001-doc-audiences.md  0002-archive-layout.md  0003-completion-ownership.md
scripts/: bootstrap_uv.sh  clear_run.sh  kb_python.sh  kbharness  run_agent_problem.sh  run_agent_problem.slurm.sh  run_agent_range.sh  run_claude_problem.sh  run_claude_problem.slurm.sh  run_claude_range.sh  run_codex_problem.sh  run_codex_problem.slurm.sh  run_codex_range.sh  setup_kernelbench_env.sh  test_candidate_validation.sh  test_command_broker.sh  test_harness_mcp.sh
src/kernel_bench_experiment_agents/: __init__.py  activity_trace.py  agent_specs.py  archive_layout.py  candidate_commands.py  candidate_contract.py  candidate_snapshot.py  candidate_validation.py  cli.py  command_broker.py  command_client.py  command_mcp.py  common.py  completion_policy.py  evaluation_runner.py  execution_commands.py  goal_status.py  gpu_pool.py  hardware_catalog.py  kernelbench.py  live_gpu_wait.py  mcp_server.py  mcp_trace.py  ncu_runner.py  ncu_summary.py  policy_model.py  profile_commands.py  project.py  run_metrics.py  runtime_policy.py  status_commands.py  subprocess_tools.py  summary_commands.py  summary_math.py  summary_report.py  summary_scan.py  trace_analysis.py  trace_commands.py  (+9 more)
(+80 files in other folders)
