[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-bench-experiment-agents"
version = "0.1.0"
description = "Codex-first scaffold for KernelBench optimization experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kbe = "kernel_bench_experiment_agents.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
