[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelbench-harness"
version = "0.3.0"
description = "Harness for running autonomous KernelBench optimization solvers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
kbharness = "kernel_bench_experiment_agents.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
